manifests/monitoring/thanosSidecar.yaml
apiVersion: v1
kind: Service
metadata:
  name: thanos-sidecar
  namespace: default
  labels:
    app: thanos-sidecar
spec:
  clusterIP: None
  selector:
    prometheus: k8s
  ports:
    - name: grpc
      port: 10901
      targetPort: grpc
